--- a/gyak9/wwwroot/hajo.html
+++ b/gyak9/wwwroot/hajo.html
@@ -3,8 +3,81 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id="outer">
+        <div id="questionText">
+            Question text
+        </div>
+        <div id="middle">
+            <div id="responses">
+                <div id="response1" class="questions pressable">Response 1</div>
+                <div id="response2" class="questions pressable correct">Response 2</div>
+                <div id="response3" class="questions pressable incorrect">Response 3</div>
+            </div>
+            <div id="picture">
+                <img id="pic1" src="https://kzgzdiag426.blob.core.windows.net/netcore/teszt-0050.jpg" />
+            </div>
+        </div>
+        <div id="contr">
+            <div class="butt pressable">Back</div>
+            <div class="butt pressable">Forward</div>
+        </div>
+    </div>
+    <style>
+        html, body {
+            height: 100%;
+        }
 
+        div {
+            margin: 10px;
+            border: 1px solid darkred
+        }
+
+        #outer {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #questionText {
+        }
+
+        #middle {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+        }
+
+        #responses {
+            flex-grow: 1;
+            flex-shrink: 1;
+        }
+
+        #contr {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+
+        #picture {
+            overflow: hidden;
+            flex-shrink:0;
+        }
+
+        .pressable {
+            padding: 20px;
+            width: 80px;
+        }
+
+        .questions {
+        }
+
+        .pressable:hover {
+            background-color: fuchsia;
+            color: white;
+        }
+    </style>
 </body>
 </html>
