--- a/gyak9/wwwroot/hajo.html
+++ b/gyak9/wwwroot/hajo.html
@@ -12,17 +12,17 @@
         </div>
         <div id="middle">
             <div id="responses">
-                <div id="response1" class="questions pressable">Response 1</div>
-                <div id="response2" class="questions pressable correct">Response 2</div>
-                <div id="response3" class="questions pressable incorrect">Response 3</div>
+                <div id="answer1" onclick="answer(1)" class="questions pressable">Answer 1</div>
+                <div id="answer2" onclick="answer(2)" class="questions pressable correct">Answer 2</div>
+                <div id="answer3" onclick="answer(3)" class="questions pressable incorrect">Answer 3</div>
             </div>
             <div id="picture">
                 <img id="pic1" src="https://kzgzdiag426.blob.core.windows.net/netcore/teszt-0050.jpg" />
             </div>
         </div>
         <div id="contr">
-            <div class="butt pressable">Back</div>
-            <div class="butt pressable">Forward</div>
+            <div id="backButton" class="butt pressable">Back</div>
+            <div id="forwardButton" class="butt pressable">Forward</div>
         </div>
     </div>
     <style>
